--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,8 @@
 llm:
-  model_name: "qwen3:8b"
+  model_name: "deepseek-chat"
   local: True
-  temperature: 0.6
+  temperature: 0.5
   top_k: 20
   top_p: 0.95
   repeat_penalty: 1.0
+  deepseek: True
