--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "omegaconf (>=2.3.0,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "langchain-openai (>=1.0.3,<2.0.0)",
-    "langchain-ollama (>=1.0.0,<2.0.0)"
+    "langchain-ollama (>=1.0.0,<2.0.0)",
+    "neo4j (>=6.0.3,<7.0.0)"
 ]
 
 
