--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,18 @@ dependencies = [
     "python-dotenv (>=1.2.1,<2.0.0)",
     "langchain-openai (>=1.0.3,<2.0.0)",
     "langchain-ollama (>=1.0.0,<2.0.0)",
-    "neo4j (>=6.0.3,<7.0.0)"
+    "neo4j (>=6.0.3,<7.0.0)",
+    "ruff (>=0.14.8,<0.15.0)",
+    "pre-commit (>=4.5.0,<5.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff.format]
+quote-style = "double"
+exclude = ["data/**"]
+indent-style = "space"
+skip-magic-trailing-comma = true
