Added .env.example file, updated .gitignore to include .env, modified config.yaml to change llm type, adjusted Neo4jLoader path in test.py, created CI workflow for linting and formatting, added create_entities.cypher for entity management, and refactored LLMWorker to support Mistral.

--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,7 @@
 llm:
   model_name: "deepseek-chat"
-  local: True
   temperature: 0.5
   top_k: 20
   top_p: 0.95
   repeat_penalty: 1.0
-  deepseek: True
+  type: "deepseek"
