feat: add loading entities from google

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "langchain-ollama (>=1.0.0,<2.0.0)",
     "neo4j (>=6.0.3,<7.0.0)",
     "ruff (>=0.14.8,<0.15.0)",
-    "pre-commit (>=4.5.0,<5.0.0)"
+    "pre-commit (>=4.5.0,<5.0.0)",
+    "gdown (>=5.2.0,<6.0.0)"
 ]
 
 
