--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "gdown (>=5.2.0,<6.0.0)",
     "fastapi (>=0.124.2,<0.125.0)",
     "uvicorn[standard] (>=0.38.0,<0.39.0)",
+    "langchain-community (>=0.4.1,<0.5.0)",
 ]
 
 
