--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "fastapi (>=0.124.2,<0.125.0)",
     "uvicorn[standard] (>=0.38.0,<0.39.0)",
     "langchain-community (>=0.4.1,<0.5.0)",
+    "mistralai (>=1.10.0,<2.0.0)",
 ]
 
 
