--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,11 @@ dependencies = [
     "uvicorn[standard] (>=0.38.0,<0.39.0)",
     "langchain-community (>=0.4.1,<0.5.0)",
     "mistralai (>=1.10.0,<2.0.0)",
+    "ragas[langchain] (>=0.4.2,<0.5.0)",
+    "datasets (>=4.4.2,<5.0.0)",
+    "langchain-mistralai (>=1.1.1,<2.0.0)",
+    "langchain-deepseek (>=1.0.1,<2.0.0)",
+    "openai (>=2.14.0,<3.0.0)",
 ]
 
 
