--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,35 @@
+networks:
+  app-network:
+    driver: bridge
+
+volumes:
+  neo4j_data:
+  neo4j_logs:
+  neo4j_import:
+  neo4j_plugins:
+  ollama_modelsYf he:
+
 services:
   backend:
+    networks:
+      - app-network
     build:
       context: .
       dockerfile: backend/Dockerfile
     ports:
       - "8000:8000"
+    environment:
+      - NEO4J_URI=bolt://neo4j-db:7687
+      - NEO4J_USERNAME=neo4j
+      - NEO4J_PASSWORD=password123
+      - OLLAMA_URL=http://ollama:11434
     volumes:
       - .:/app
-    command: uvicorn backend.main:app --host 0.0.0.0 --port 8000 --reload
-
+    command: uvicorn backend.main:app --host 0.0.0.0 --port 8000
+  
   frontend:
+    networks:
+      - app-network
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -17,8 +37,52 @@ services:
       - "5173:5173"
     environment:
       - BACKEND_URL=http://backend:8000
-    depends_on:
-      - backend
     volumes:
       - ./frontend:/app
       - /app/node_modules
+
+  ollama:
+    image: ollama/ollama:0.5.9
+    container_name: ollama
+    ports:
+      - "11434:11434"
+    environment:
+      - OLLAMA_HOST=0.0.0.0:11434  # ← КРИТИЧНО!
+    volumes:
+      - ollama_models:/root/.ollama/models
+    networks:
+      - app-network
+    healthcheck:
+      test: >
+        sh -c "
+          timeout 5 bash -c 'cat < /dev/null > /dev/tcp/0.0.0.0/11434' ||
+          exit 1
+        "
+      interval: 5s
+      timeout: 3s
+      retries: 10
+      start_period: 15s
+
+  neo4j:
+    image: neo4j:5.18-community
+    container_name: neo4j-db
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+    environment:
+      - NEO4J_AUTH=neo4j/password123
+      - NEO4J_PLUGINS=["apoc"]
+    volumes:
+      - neo4j_data:/data
+      - neo4j_logs:/logs
+      - neo4j_import:/var/lib/neo4j/import
+      - neo4j_plugins:/plugins
+    restart: unless-stopped
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD", "cypher-shell", "-u", "neo4j", "-p", "password123", "RETURN 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 15  # ↑ увеличил — Neo4j стартует медленно при первом запуске
+      start_period: 60s  # ↑
