--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "langchain-mistralai (>=1.1.1,<2.0.0)",
     "langchain-deepseek (>=1.0.1,<2.0.0)",
     "openai (>=2.14.0,<3.0.0)",
+    "transformers (>=4.57.3,<5.0.0)",
 ]
 
 
