update env.example & fixed envs & fixed test

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-LLM_API_KEY=
-DRIVE_FOLDER_URL=
+DEEPSEEK_API_KEY=
+MISTRAL_API_KEY=
+
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=password123
+
+OLLAMA_URL=http://localhost:11434
